<resources>
    <string name="app_name">mobil proje</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="surName">Surname</string>
    <string name="gradYear">Graduation Year</string>
    <string name="gender">Gender</string>
    <string name="photo">Photo</string>
    <string-array name="optionArray">
        <item>Looking House</item>
        <item>Looking Firend</item>
        <item>Not Looking</item>
    </string-array>

    <string-array name="optionSearch">
        <item>Name</item>
        <item>Class</item>
        <item>Duration</item>
    </string-array>
    <string name="phoneNumber">Phone Number(5xx xxx xx xx)</string>
    <string name="login">Login</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">Grad. Date</string>
    <string name="username">Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update">Update</string>
    <string name="successful">Successful</string>
    <string name="cikis">Exit</string>
    <string name="retype_password">Retype Password</string>
    <string name="show_password">Show Password</string>
    <string name="add_update">Add/Update</string>
    <string name="save">Save</string>
    <string name="stay_duration">Stay Duration (Months)</string>
    <string name="distance_to_campus">Distance to Campus (Meter)</string>
    <string name="status">Status</string>
    <string name="department">Department</string>
    <string name="student_class">Class</string>
    <string name="home_page">Home Page</string>
    <string name="find">Find</string>
    <string name="create_update_profile">Create/Update Profile</string>
    <string name="list_users">List Users</string>
    <string name="map">Map</string>
    <string name="delete">Delete</string>
    <string name="find_friend">Find Friend</string>
    <string name="send_request">Send Request</string>
    <string name="incoming_requests">Incoming Requests \nClick To Reply</string>
    <string name="accept_request">Accept Request</string>
    <string name="reject_request">Reject Request</string>
    <string name="title_activity_maps">Leanback MapsActivity</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="distance_meter">Search by distance (Meter)</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="outgoing_request">Outgoing Request</string>
</resources>