<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:text="@string/add_update"
        android:textSize="@dimen/sp_35"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <ImageView
        android:id="@+id/profile_photo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/title"
        android:layout_marginTop="16dp"
        android:src="@drawable/baseline_account_box_24_black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_photo"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:drawableLeft="@drawable/baseline_name_surname"
            style="@style/EditTextStyle"
            android:layout_height="wrap_content"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/tv_department"
            android:layout_width="match_parent"
            android:drawableLeft="@drawable/baseline_business_center_24"
            style="@style/EditTextStyle"
            android:layout_height="wrap_content"
            android:hint="@string/department" />

        <EditText
            android:id="@+id/tv_class"
            style="@style/EditTextStyle"
            android:drawableLeft="@drawable/baseline_edit_24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/student_class" />

        <EditText
            android:id="@+id/tv_stay_duration"
            android:layout_width="match_parent"
            android:drawableLeft="@drawable/baseline_date_24"
            style="@style/EditTextStyle"
            android:layout_height="wrap_content"
            android:hint="@string/stay_duration" />

        <EditText
            android:id="@+id/tv_distance"
            android:layout_width="match_parent"
            android:drawableLeft="@drawable/baseline_directions_bus_24"
            style="@style/EditTextStyle"
            android:layout_height="wrap_content"
            android:hint="@string/distance_to_campus" />

        <Spinner
            android:id="@+id/tv_status"
            android:layout_width="match_parent"
            style="@style/EditTextStyle"
            android:layout_height="wrap_content"
            android:entries="@array/optionArray" />

        <TextView
            android:id="@+id/tv_email_info"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:drawableLeft="@drawable/baseline_email_24"
            android:layout_height="wrap_content"
            android:hint="@string/email" />

        <TextView
            android:id="@+id/tv_phone_info"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:drawableLeft="@drawable/baseline_local_phone_24"
            android:layout_height="wrap_content"
            android:hint="@string/phoneNumber" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textAllCaps="false"
                android:layout_marginHorizontal="8dp"/>

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:layout_marginHorizontal="8dp"/>

        </LinearLayout>



    </LinearLayout>
</RelativeLayout>
