<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/dpp_12"
                android:background="@drawable/rounded_bg"
                android:layout_marginRight="@dimen/dpp_12"
                android:id="@+id/userPhoto" />
            <EditText
                android:id="@+id/userNameText"
                style="@style/EditTextStyle"
                android:drawableLeft="@drawable/baseline_username_box_24"
                android:layout_marginVertical="@dimen/verticalText"
                android:hint="@string/username" />
            <EditText
                android:id="@+id/passwordText"
                style="@style/EditTextStyle"
                android:layout_marginVertical="@dimen/verticalText"
                android:hint="@string/password"
                android:drawableLeft="@drawable/password_24"
                android:inputType="textPassword"/>
            <EditText
                android:id="@+id/passwordRetypeText"
                style="@style/EditTextStyle"
                android:drawableLeft="@drawable/password_24"
                android:layout_marginVertical="@dimen/verticalText"
                android:hint="@string/retype_password"
                android:inputType="textPassword"/>
            <EditText
                android:id="@+id/nameText"
                style="@style/EditTextStyle"
                android:drawableLeft="@drawable/baseline_name_surname"
                android:layout_marginVertical="@dimen/verticalText"
                android:hint="@string/name" />

            <EditText
                android:id="@+id/surNameText"
                style="@style/EditTextStyle"
                android:drawableLeft="@drawable/baseline_name_surname"
                android:layout_marginVertical="@dimen/verticalText"
                android:hint="@string/surName" />

            <EditText
                android:id="@+id/emailText"
                style="@style/EditTextStyle"
                android:layout_marginVertical="@dimen/verticalText"
                android:hint="@string/email"
                android:drawableLeft="@drawable/baseline_email_24"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/phoneNumberText"
                style="@style/EditTextStyle"
                android:drawableLeft="@drawable/baseline_local_phone_24"
                android:layout_marginVertical="@dimen/verticalText"
                android:hint="@string/phoneNumber"
                android:inputType="phone"/>
            <EditText
                android:id="@+id/startDateText"
                android:drawableLeft="@drawable/baseline_date_24"
                style="@style/EditTextStyle"
                android:layout_marginVertical="@dimen/verticalText"
                android:hint="@string/startDate"
                android:inputType="date"
                android:focusable="false"
                android:clickable="true"/>
            <EditText
                android:id="@+id/endDateText"
                style="@style/EditTextStyle"
                android:drawableLeft="@drawable/baseline_date_24"
                android:layout_marginVertical="@dimen/verticalText"
                android:hint="@string/endDate"
                android:inputType="date"
                android:focusable="false"
                android:clickable="true"/>
            <Spinner
                style="@style/EditTextStyle"
                android:layout_marginVertical="@dimen/verticalText"
                android:id="@+id/gradOption"
                android:entries = "@array/optionArray"
                android:layout_marginLeft="@dimen/centerilaze"/>

            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/verticalText"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:text="@string/register"

                android:textAllCaps="false"/>

        </LinearLayout>
    </ScrollView>

</layout>